# CFrame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
CFrame/: CMakeLists.txt
CFrame/src/: CFrame.h
CFrame/src/CFrame/: AnimationManager.cpp  AnimationManager.h  Application.cpp  Application.h  ApplicationManager.cpp  ApplicationManager.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Window.cpp  Window.h
CFrame/src/CFrame/Animator/: AnimationManager.cpp  AnimationManager.h  Animator.cpp  Animator.h  Bounce.cpp  Bounce.h  Rotate.cpp  Rotate.h  Scale.cpp  Scale.h  ScaleX.cpp  ScaleX.h  ScaleY.cpp  ScaleY.h  Translate.cpp  Translate.h  TranslateX.cpp  TranslateX.h  TranslateY.cpp  TranslateY.h
CFrame/src/CFrame/CFrameEvent/: CFrameEvent.h  KeyCode.h
CFrame/src/CFrame/RenderAPI/: Camera2D.h  Rederer2D.h  RenderCommand.h  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.h
CFrame/src/CFrame/Renderer/: FontLoader.cpp  FontLoader.h  FontManager.cpp  FontManager.h  FrameBuffer.cpp  FrameBuffer.h  IndexBufferr.cpp  IndexBufferr.h  Renderer.cpp  Renderer.h  Renderer1.cpp  Renderer1.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
CFrame/src/CFrame/UIElements/: Button.cpp  Button.h  Color.cpp  Color.h  Container.cpp  Container.h  Grid.cpp  Grid.h  HBox.cpp  HBox.h  Image.cpp  Image.h  InputField.cpp  InputField.h  Label.cpp  Label.h  TextField.cpp  TextField.h  UIElement.cpp  UIElement.h  VBox.cpp  VBox.h
CFrame/src/CFrame/res/shaders/: Instance.shader  basic.shader  lineShader.shader  screenShader.shader  textShader.shader
SandBox/: ServerInfoBox.h  glyph_A.pgm
SandBox/src/: App.cpp  ChessBoard.cpp  ChessBoard.h  ChessPiece.cpp  ChessPiece.h  SDL3.lib  ServerInfoBox.cpp  ServerInfoBox.h
